--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<p>hi I&#39;m jenn kaplan</p>
-<p>I&#39;m a JS frontend and tools engineer.</p>
-<p>I currently work at Apple.</p>
-<p>you can&#39;t hire me.</p>
-<p><a href="https://twitter.com/jkap">follow me on twitter</a></p>
-<p><a href="https://github.com/jkap">look at my github</a></p>
-<p>bye</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>jenn kaplan: the website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+  <p>hi I‘m jenn kaplan</p>
+  <p>I‘m a JS frontend and tools engineer.</p>
+  <p>I currently work at Apple.</p>
+  <p>you can‘t hire me.</p>
+  <p><a href="https://twitter.com/jkap">follow me on twitter</a></p>
+  <p><a href="https://github.com/jkap">look at my github</a></p>
+  <p>bye</p>
+</body>
+</html>
