--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <p>hi I‘m jenn kaplan</p>
-  <p>I‘m a JS frontend and tools engineer.</p>
+  <p>hi I’m jenn kaplan</p>
+  <p>I’m a JS frontend and tools engineer.</p>
   <p>I currently work at Apple.</p>
-  <p>you can‘t hire me.</p>
+  <p>you can’t hire me.</p>
   <p><a href="https://twitter.com/jkap">follow me on twitter</a></p>
   <p><a href="https://github.com/jkap">look at my github</a></p>
   <p>bye</p>
