--- a/default.html
+++ b/default.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>{{.Doc.title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@jkap">
+  <meta name="twitter:title" content="{{.Doc.title}}">
+  <meta name="twitter:description" content="i make maps and map accessories. you can't hire me.">
 </head>
 <body>
   {{.Doc.body}}
